<resources>
    <string name="app_name" translatable="false">2048 Battle Royale</string>
    <string name="start_game">Start Game</string>
    <string name="select_gamemode">Select Gamemode</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="join_lobby">Join Lobby</string>
    <string name="create_lobby">Create Lobby</string>
    <string name="game_settings">Settings</string>
    <string name="change_theme">Change Theme</string>
    <string name="licenses">Licenses</string>
    <string name="title_2048" translatable="false">2048</string>
    <string name="game_exit_confirmation">Do you want to exit the current game?</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="continue_playing">Continue playing</string>
    <string name="waiting_room">Waiting Room</string>
    <string name="lobby_list">Lobbys</string>
    <string name="battle_royale" translatable="false">Battle Royale</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="classic">Classic</string>
    <string name="restart_message">The app will now restart.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="no_lobbys_found">No Lobbys found</string>
    <string name="create_new_lobby">Create New Lobby</string>
    <string name="no_connection">Could not connect to game server. Please check your internet connection and try again.</string>
    <string name="points_0">Points: 0</string>
    <string name="points_num">Points: %1$d</string>
    <string name="players">Players</string>
    <string name="change_username">Change Username</string>
    <string name="username">Username</string>
    <string name="username_saved">Username saved.</string>
    <string name="longer_than_20_chars">Username can\'t be longer than 16 characters</string>
    <string name="shorter_than_3">Username can\'t be shorter than 3 characters</string>
    <string name="lobby_information">Lobby Information</string>
    <string name="position">%1$d.</string>
    <string name="highscore_num">Highscore: %1$d</string>
    <string name="game_over">Game Over!</string>
    <string name="game_won">You won!</string>
    <string name="connection_lost">No Internet connection, reconnecting…</string>
    <string name="reconnect_failed">Reconnecting failed ⊙﹏⊙∥</string>
    <string name="reconnect_successful">Reconnected φ(゜▽゜*)♪</string>
    <string name="time_0">0s</string>
    <string name="time_num">%1$ds</string>
    <string name="game_won_quote">Winner Winner Chicken Dinner!</string>
    <string name="emoji_medal_first" translatable="false">🥇</string>
    <string name="emoji_medal_second" translatable="false">🥈</string>
    <string name="emoji_medal_third" translatable="false">🥉</string>
    <string name="emoji_tombstone" translatable="false">☠️</string>
    <string name="position_current_total">%1$d / %2$d</string>
    <string name="lobby_user_count">Players (%1$d / %2$d)</string>
    <string name="lobby_id">ID: %1$s</string>
    <string name="battle_royale_rules">Knockout Rules for Battle Royale:\nEvery 30 seconds, the bottom half of players will lose, sorted by achieved points. If you have no moves left, you lose, even if you are in the upper half of players.</string>
    <string name="lobby_opening">Please wait, we are creating the lobby…</string>
    <string name="game_already_running">This game is already running. Please select another lobby.</string>
    <string name="lobby_already_closed">This lobby was closed. Please select another one!</string>
</resources>
